data/derived/comb/progs/unify/prog4408.ml.out
Characters 210-211:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int -> int * int -> int * int
       but an expression was expected of type int -> int * int -> int
       Type int * int is not compatible with type int 
